chore: fix z-index on divs

--- a/my-app/src/Languages.css
+++ b/my-app/src/Languages.css
@@ -3,6 +3,9 @@
   margin-bottom: 10%;
   z-index: 10;
 }
+.front h2 {
+  z-index: 10;
+}
 .FrontEnd ul {
   display: flex;
   align-items: stretch;
@@ -62,7 +65,7 @@
   border: 2px solid black;
   width: 25vw;
   height: 25vw;
-  z-index: 0;
+  z-index: -1;
   box-shadow: 0 0 10px rgb(168, 168, 168);
   overflow-x: hidden;
 }
@@ -75,7 +78,7 @@
   width: 40vw;
   height: 40vh;
   border-radius: 10px;
-  z-index: 0;
+  z-index: -1;
   overflow-x: hidden;
   box-shadow: 0 0 10px rgb(168, 168, 168);
 }
@@ -99,7 +102,6 @@
     margin-bottom: 50%;
     margin-left: 5%;
     text-align: left;
-    z-index: 10;
   }
   br {
     display: none;
